<resources>
    <string name="app_name">DMP</string>
    <string name="action_buys">Historico</string>
    <string name="action_about">Sobre</string>
    <string name="home_buy_msg_error">Seu carrinho está vazio.</string>
    <string name="adapter_home_products_mock_product_name">Bala Juquinha</string>
    <string name="loading_msg">Carregando...</string>
    <string name="adapter_currency">R$</string>
    <string name="error_msg">Verifique sua conexão e tente novamente.</string>
    <string name="adapter_home_mock_price">R$ XX,XX</string>
    <string name="home_snack_msg">## foi adicionado ao carrinho.</string>
    <string name="title_activity_payment">Pagamento</string>
    <string name="payment_total_products">Total de produtos :</string>
    <string name="payment_total_qtd_mock">XXXXX</string>
    <string name="payment_total_price">Valor total:</string>
    <string name="payment_total_price_mock">XXXXX</string>
    <string name="payment_separator">-</string>
    <string name="payment_card_date_title">DADOS DO CARTÃO</string>
    <string name="payment_name_card">Nome no cartão</string>
    <string name="payment_dt_card">Data de vencimento</string>
    <string name="payment_card_flag_amex">AMEX</string>
    <string name="payment_card_flag_mastercard">MASTERCARD</string>
    <string name="payment_card_flag_visa">VISA</string>
    <string name="payment_error_msg_validator">Verifique todos os dados.</string>
    <string name="payment_snack_loading">Efetuando compra, aguarde por favor...</string>
    <string name="payment_snack_success">Compra efetuada com sucesso !</string>
    <string name="payment_snack_error">Houve algum problema tente novamente mais tarde.</string>
    <string name="title_activity_historic">Historico</string>
    <string name="title_activity_about">Sobre</string>
    <string name="adapter_historic_product_name_mock">XXXXXXX</string>
    <string name="adapter_historic_product_price_mock">XXXXX</string>
    <string name="adapter_historic_card_name">CARDNAME</string>
    <string name="adapter_historic_dt_card">DATACARD</string>
    <string name="adapter_historic_flag_id">X</string>
    <string name="adapter_historic_flag_name">FLAGNAME</string>
    <string name="adapter_historic_cvv">CVV</string>
    <string name="adapter_historic_price">PRICE</string>
    <string name="adapter_historic_card_number">CARDNUMBER</string>
</resources>
