<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/adapter_historic_dimen"
    android:paddingTop="@dimen/adapter_historic_dimen"
    android:paddingBottom="@dimen/adapter_historic_dimen"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/adapter_historic_payment_card_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/adapter_historic_card_name" />

            <TextView
                android:id="@+id/adapter_historic_payment_dt_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/adapter_historic_dt_card" />

            <TextView
                android:id="@+id/adapter_historic_payment_card_flag_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/adapter_historic_flag_id" />

            <TextView
                android:id="@+id/adapter_historic_payment_card_flag_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/adapter_historic_flag_name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/adapter_historic_layout_dimen"
            android:orientation="vertical">

            <TextView
                android:id="@+id/adapter_historic_payment_cvv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/adapter_historic_cvv" />

            <TextView
                android:id="@+id/adapter_historic_payment_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/adapter_historic_price" />

            <TextView
                android:id="@+id/adapter_historic_payment_card_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/adapter_historic_card_number" />

        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>
