<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.dmp.ui.PaymentActivity"
    tools:showIn="@layout/activity_payment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_total_products" />

            <TextView
                android:id="@+id/payment_total_qtd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/payment_total_qtd_mock" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_total_price" />

            <TextView
                android:id="@+id/payment_total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/payment_total_price_mock" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/payment_card_data_margin"
            android:text="@string/payment_card_date_title"
            android:textSize="@dimen/payment_card_data_title_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="@dimen/payment_card_data_margin"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Número do cartão" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/payment_edt_card_fragment_1"
                android:layout_width="@dimen/payment_edt_card_default_size"
                android:layout_height="wrap_content"
                android:digits="0987654321"
                android:inputType="number"
                android:maxLength="4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/payment_separator_margin"
                android:text="@string/payment_separator" />

            <EditText
                android:id="@+id/payment_edt_card_fragment_2"
                android:layout_width="@dimen/payment_edt_card_default_size"
                android:layout_height="wrap_content"
                android:digits="0987654321"
                android:inputType="number"
                android:maxLength="4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/payment_separator_margin"
                android:text="@string/payment_separator" />

            <EditText
                android:id="@+id/payment_edt_card_fragment_3"
                android:layout_width="@dimen/payment_edt_card_default_size"
                android:layout_height="wrap_content"
                android:digits="0987654321"
                android:inputType="number"
                android:maxLength="4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/payment_separator_margin"
                android:text="@string/payment_separator" />

            <EditText
                android:id="@+id/payment_edt_card_fragment_4"
                android:layout_width="@dimen/payment_edt_card_default_size"
                android:layout_height="wrap_content"
                android:digits="0987654321"
                android:inputType="number"
                android:maxLength="4" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/payment_csv_margin"
            android:layout_marginTop="@dimen/payment_csv_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Código de segurança: " />

            <EditText
                android:id="@+id/payment_edt_secury_code"
                android:layout_width="@dimen/payment_edt_card_default_size"
                android:layout_height="wrap_content"
                android:digits="0987654321"
                android:inputType="number" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Selecione a bandeira" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/payment_radio_visa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="cardFlagClick"
                android:text="@string/payment_card_flag_visa" />

            <RadioButton
                android:id="@+id/payment_radio_master"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="cardFlagClick"
                android:text="@string/payment_card_flag_mastercard" />

            <RadioButton
                android:id="@+id/payment_radio_amex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="cardFlagClick"
                android:text="@string/payment_card_flag_amex" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/payment_name_card" />

        <EditText
            android:id="@+id/payment_name_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_dt_card" />

            <EditText
                android:id="@+id/payment_card_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:digits="0987654321"
                android:hint="MM"
                android:inputType="number"
                android:maxLength="2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/" />

            <EditText
                android:id="@+id/payment_card_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:digits="0987654321"
                android:hint="AA"
                android:inputType="number"
                android:maxLength="2" />
        </LinearLayout>

        <Button
            android:id="@+id/payment_btn_buy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Finalizar compra." />
    </LinearLayout>
</ScrollView>
